# Neural-Style-Transfer-with-WebAssembly

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  build.sh  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
benches/: performance.rs
crates/neural-style-transfer/: Cargo.toml
crates/stylizer/: Cargo.toml
crates/stylizer/src/: lib.rs
docs/: ADVANCED_IMPLEMENTATION.md  IMAGE_PREPROCESSING.md
rust-core/: Cargo.toml
rust-core/src/: engine.rs  image_utils.rs  lib.rs  model_registry.rs  models.rs  onnx_engine.rs  onnx_registry.rs  style_transfer.rs  webgpu_backend.rs
rust-core/src/gpu/: mod.rs
rust-core/src/models/: mod.rs
rust-core/src/utils/: image_filters.rs  tensor_ops.rs
scripts/: benchmark.py  build-wasm.sh  build.sh  build_advanced.sh  download_models.sh  model_converter.py
src/: lib.rs
tests/: integration_tests.rs
tools/: download_comprehensive_models.py  download_models.py  download_onnx_zoo_models.py  download_onnx_zoo_working.py  download_real_models.py  download_working_models.py  export_to_onnx.py
web/: README.md  advanced_interface.html  app.js  basic_test.html  build.sh  debug.html  debug_console.html  debug_main.html  download_models.sh  index.html  main.js  manifest.json  manifest.webmanifest  minimal_test.html  modern_interface.html  onnx_test.html  service-worker.js  simple_debug.html  simple_test.html  status.html  style.css  styles.json  sw.js  test.html  test_dimensions.html  test_frontend.html  test_image_preprocessor.html  test_result_display.html  test_styles.html  test_wasm.html  test_wasm_functionality.html
web-app/: .eslintrc.js  package-lock.json  package.json
web-app/public/: index.html  manifest.json  neural_style_transfer_core.d.ts  neural_style_transfer_core.js  neural_style_transfer_core_bg.wasm  neural_style_transfer_core_bg.wasm.d.ts  sw.js  test-wasm.html
web-app/public/models/: README.md
web-app/src/: App.css  App.js  App.tsx  index.tsx
web-app/src/components/: ImageDisplay.css  ImageDisplay.tsx  ImageUploader.css  ImageUploader.js  ImageUploader.tsx  StyleControls.css  StyleControls.tsx  StyleSelector.css  StyleSelector.js  StyleSelector.tsx  StyleTransfer.css  StyleTransfer.js  WebcamMode.css  WebcamMode.tsx
web-app/src/hooks/: useAIStyleTransfer.js  useRustWasmEngine.js  useWasmEngine.js
web-app/src/types/: index.ts
web-app/src/wasm/: neural_style_transfer_core.d.ts  neural_style_transfer_core.js  neural_style_transfer_core_bg.wasm  neural_style_transfer_core_bg.wasm.d.ts  package.json
web/js/: imagePreprocessor.js
web/models/: DOWNLOAD_GUIDE.md  README.md  abstract_expr.onnx  cyberpunk.onnx  model-registry.json  picasso_cubist.onnx  starry_night.onnx  ukiyo_e.onnx
