[workspace]
members = [
  "rust-core"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
getrandom = { version = "0.2", features = ["js"] }
ndarray = "0.15"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
