[package]
name = "neural-style-transfer-core"
version = "0.1.0"
edition = "2021"
authors = ["Hamza Khan <hamzakhan7473@example.com>"]
description = "WebAssembly-powered neural style transfer engine"
license = "MIT"
repository = "https://github.com/Hamzakhan7473/Neural-Style-Transfer-with-WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
wee_alloc = { workspace = true }
getrandom = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement", 
  "HtmlImageElement",
  "ImageData",
  "Window"
]
