[package]
name = "neural-style-transfer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlImageElement",
  "FileReader",
  "File",
  "Blob",
  "Url",
  "Response",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "HtmlVideoElement",
]}

[features]
default = ["console_error_panic_hook"]
