[package]
name = "neural-style-transfer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
once_cell = "1.19"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "HtmlVideoElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Window",
  "Navigator",
  "Blob",
  "Url",
  "File",
  "FileReader",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode", 
  "MediaDevices",
  "MediaStream", 
  "MediaStreamConstraints",
  "Performance",
  "Event",
  "EventTarget",
  "MouseEvent",
  "DragEvent",
  "ProgressEvent",
]

[profile.release]
opt-level = "s"
lto = true
